# bg

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  sdl.supp
assets/: Montserrat-Regular.fnt  NotoSans-Medium.fnt
fsm/: fsm.c  fsm.h  main.c  parse.py  reset.c  running.c  scheme.toml  stopped.c
include/: ai.h  ball.h  board.h  buttons.h  checker.h  dialog.h  dice.h  dstats.h  events.h  fsm.h  game.h  media.h  paddle.h  pip.h  sand.h  score.h  util.h  view.h  wildbg.h
lib/engine/: CMakeLists.txt
lib/engine/include/: events.h  mmanager.h  snippet.h  sprite.h  vector.h  vmanager.h
lib/engine/src/: events.c  mmanager.c  snippet.c  sprite.c  vector.c  vmanager.c
lib/sage/: CMakeLists.txt
lib/sage/cmake/sdl2/: FindSDL2.cmake
lib/sage/include/: array.h  bmfont.h  events.h  font.h  input.h  log.h  mmanager.h  sage.h  snippet.h  sprite.h  stb_ds.h  vector.h  vmanager.h
lib/sage/src/: bmfont.c  events.c  input.c  log.c  mmanager.c  sage.c  sageutil.c  snippet.c  sprite.c  vector.c  vmanager.c
src/: ai.c  ball.c  board.c  buttons.c  checker.c  dice.c  dstats.c  events.c  game.c  main.c  media.c  paddle.c  pip.c  sand.c  util.c  view.c
src/fsm/: fsm.c  game_over.c  init.c  match_over.c  move_confirm.c  player_move.c  roll_for_first.c  round_over.c  wait_for_roll.c
src/objects/: board.c  buttons.c  checker.c  dialog.c  dice.c  pip.c  score.c
src/view/: checker.c  pip.c  score.c
